--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,14 +43,6 @@ body {
     color: azure;
 }
 
-img {
-    width: 200px;
-    height: 200px;
-    object-fit: contain;
-    display: inline-block;
-    position: relative; 
-  }
-  
 .aboutbox {
     position: fixed;
    left:0px;
@@ -79,7 +71,7 @@ img {
 
 .grandparent {
     background-color: black;
-    width: 70vw;
+    width: 80vw;
     height: 100vh;
     margin: 40px;
     line-height: 50px;
@@ -129,10 +121,76 @@ img {
     opacity: 1
   }
 
-  .ovalcontainer {
+  .containerimg {
+    display: flex;
+    justify-items: center;
+    flex-wrap: wrap;
+    background-color: white;
+    flex-direction: row;
+    padding-left: 20px;
+    padding-top: 20px;
 
+}
+
+img {
+    width: 250px;
+    width: 3fr;
   }
 
+  .imgcredit {
+    width: 1fr;
+    font-weight: normal;
+    margin: 25px;
+    font-size: 10px;
+    text-transform: lowercase;
+    line-height: 1em;
+    transform: rotate(-25deg); /* Dreht den Text */
+    z-index: 1;
+    color: black;
+  } 
+
+  .button {
+    border-radius: 25px;
+    border: 1px;
+    border-style: dotted;
+    border-color: black;
+    background: black;
+    width: 60px;
+    height: 15px;
+    color: white;
+    text-align: center;
+    font-weight: normal;
+    font-size: 13px;
+    text-transform: lowercase;
+    line-height: 1em;
+    transform: rotate(25deg); /* Dreht den Text */
+    z-index: 1;
+    
+  }
+  
+  .button:hover {
+    border-radius: 25px;
+    border-style: dotted;
+    border-width: 1px;
+    border-color: black;
+    background: white;
+    width: 60px;
+    height: 15px;
+    color: black;
+    text-align: center;
+    font-weight: normal;
+    font-size: 13px;
+    text-transform: lowercase;
+    line-height: 1em;
+    transform: rotate(25deg); /* Dreht den Text */
+    z-index: 1;
+    cursor: crosshair;
+  }
+  
+  .button:active {
+    transform: scale(0.95);
+  }
+  
   .ibm-plex-mono-regular {
     font-family: "IBM Plex Mono", serif;
     font-weight: 400;
@@ -146,7 +204,7 @@ img {
   text-align: right;
   text-transform: uppercase;
   font-size: 120px;
-  line-height: 0.6em;
+  line-height: 0em;
 }
 
   h2 {
@@ -155,8 +213,8 @@ img {
   font-weight: normal;
   text-align: right;
   text-transform: uppercase;
-  font-size: 60px;
-  line-height: 0.6em;
+  font-size: 40px;
+  line-height: 1em;
 }
 
 h3 {
@@ -165,8 +223,8 @@ h3 {
   font-weight: normal;
   text-align: right;
   text-transform: uppercase;
-  font-size: 25px;
-  line-height: 0.8em;
+  font-size: 15px;
+  line-height: 1.15em;
 }
 
   h4 {
@@ -191,7 +249,14 @@ h3 {
 }
 
 
+.crossword:hover {
+    cursor: crosshair;
+  }
 
+  
+  img:hover {
+    cursor: crosshair;
+  }
 
 
 .crossword {
@@ -199,6 +264,7 @@ h3 {
     grid-template-columns: repeat(15, 65px);
     grid-auto-rows: 65px;
     gap: 0px;
+    margin: 10px;
 }
 
 .cell {
