--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -6,3 +6,12 @@
   font-style:normal;
 }
 
+
+
+@font-face {
+  font-family: OffBitTrial-101;
+  src:url(../fonts/OffBitTrial-101.otf) format("opentype");
+  font-weight:200;
+  font-style:normal;
+
+  }
