--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,45 +2,52 @@
 
 body {
     margin: 10;
-    padding: 100px 10px 10px 10px;
+    padding: 50px 10px 10px 10px;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:rgb(208, 171, 226);
+    background-color:rgb(233, 167, 238);
     overflow: auto;
-    font-family: IBM Plex Mono;
+    font-family: "IBM Plex Mono";
 }
 
 .title1 {
-    margin: 10px;
-    padding: 0px 20px;
+    font-family: OffBitTrial-101, IBM Plex Mono;
+    margin: 50px;
+    padding: 0px 0px;
     font-weight: normal;
     text-align: right;
     text-transform: uppercase;
-    font-size: 120px;
+    font-size: 200px;
     line-height: 0.6em;
     color: azure;
 }
+
 .title2 {
-    margin: 10px;
-    padding: 0px 20px;
+    font-family: OffBitTrial-101, IBM Plex Mono;
+    margin: 50px;
+    padding: 0px 0px;
     font-weight: normal;
     text-align: left;
     text-transform: uppercase;
-    font-size: 120px;
-    line-height: 0.6em;
+    font-size: 200px;
+    line-height: -1em;
     color: azure;
+    z-index: 1;
 }
+
 .title3 {
-    margin: 10px;
-    padding: 0px 20px;
+    font-family: OffBitTrial-101, IBM Plex Mono;
+    margin: 50px;
+    padding: 0px 0px;
     font-weight: normal;
     text-align: right;
     text-transform: uppercase;
-    font-size: 120px;
-    line-height: 0.6em;
+    font-size: 200px;
+    line-height: -1em;
     color: azure;
+    z-index: 1;
 }
 
 .aboutbox {
@@ -71,9 +78,9 @@ body {
 
 .grandparent {
     background-color: black;
-    width: 80vw;
+    width: 90vw;
     height: 100vh;
-    margin: 40px;
+    margin: 10px;
     line-height: 50px;
     overflow: auto;
     transform: rotate(-1deg);
@@ -93,7 +100,7 @@ body {
 .child-container1 {
     background-color: black;
     width: 50vw;
-    height: 50vh;
+    height: 65vh;
     margin: 1px;
     text-align: center;
     line-height: 50px;
@@ -101,10 +108,11 @@ body {
     overflow: auto;
   }
 
+
 .child-container2 {
     background-color: white;
     width: 50vw;
-    height: 50vh;
+    height: 65vh;
     margin: 1px;
     text-align: center;
     line-height: 50px;
@@ -115,6 +123,10 @@ body {
   .hidden-child {
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
+  }
+
+  .child-container1:hover .hidden-child {
+    opacity: 1
   }
 
   .child-container2:hover .hidden-child {
@@ -155,12 +167,12 @@ img {
     border-style: dotted;
     border-color: black;
     background: black;
-    width: 60px;
-    height: 15px;
+    width: 70px;
+    height: 25px;
     color: white;
     text-align: center;
     font-weight: normal;
-    font-size: 13px;
+    font-size: 20px;
     text-transform: lowercase;
     line-height: 1em;
     transform: rotate(25deg); /* Dreht den Text */
@@ -174,12 +186,12 @@ img {
     border-width: 1px;
     border-color: black;
     background: white;
-    width: 60px;
-    height: 15px;
+    width: 70px;
+    height: 25px;
     color: black;
     text-align: center;
     font-weight: normal;
-    font-size: 13px;
+    font-size: 20px;
     text-transform: lowercase;
     line-height: 1em;
     transform: rotate(25deg); /* Dreht den Text */
@@ -195,6 +207,38 @@ img {
     font-family: "IBM Plex Mono", serif;
     font-weight: 400;
     font-style: normal;
+  }
+
+
+  .navigation {
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    top: 10px; 
+  }
+
+  .random-gallery {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  .gallery-item {
+    position: absolute;
+  
+    /* Zufällige Positionierung */
+    top: calc(10% + 80% * var(--random-y, 0));
+    left: calc(10% + 80% * var(--random-x, 0));
+  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: grab;
+  }
+
+  .gallery-item:active {
+    cursor: grabbing;
   }
 
   h1 {
@@ -223,7 +267,7 @@ h3 {
   font-weight: normal;
   text-align: right;
   text-transform: uppercase;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.15em;
 }
 
@@ -238,11 +282,13 @@ h3 {
   color: aliceblue;
 }
    h6 {
+    font-family: OffBitTrial-101;
     margin: 0px;
     padding: 10px 10px 15px 0px;
     font-weight: normal;
     font-size: 60px;
     text-align: center;
+    justify-content: center;
     text-transform: uppercase;
     z-index: 1;
     color: aliceblue;
@@ -294,50 +340,4 @@ h3 {
 .cell.revealed .letter {
     color: black;
     opacity: 1
-}
-
-
-@keyframes rotation{
-	from{
-		transform: rotateY(0deg);
-	}
-	to{
-		transform: rotateY(360deg);
-	}
-
-.flying-underscores {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    overflow: hidden;
-    z-index: 3;
-}
-
-.underscore {
-    position: absolute;
-    font-size: 1rem;
-    color: transparent;
-    white-space: nowrap;
-    animation: fillText 4s ease-in-out forwards, moveAround 8s infinite linear;
-}
-
-@keyframes fillText {
-    0% {
-        color: transparent;
-    }
-    100% {
-        color: #333;
-    }
-}
-
-@keyframes moveAround {
-    0% {
-        transform: translate(0, 0) rotate(0);
-    }
-    100% {
-        transform: translate(calc(100vw - 50%), calc(100vh - 50%)) rotate(360deg);
-    }
 }
