--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -10,8 +10,16 @@
 
 @font-face {
   font-family: OffBitTrial-101;
-  src:url(../fonts/OffBitTrial-101.otf) format("opentype");
+  src:url(../fonts/OffBitTrial/OffBitTrial-101.otf) format("opentype");
   font-weight:200;
   font-style:normal;
 
   }
+
+  @font-face {
+    font-family: OffBitTrial-Dot;
+    src:url(../fonts/OffBitTrial/OffBitTrial-Dot.otf) format("opentype");
+    font-weight:200;
+    font-style:normal;
+  
+    }
