--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
-    background-color:rgb(233, 167, 238);
+    background-color: azure;
     overflow: auto;
     font-family: "IBM Plex Mono";
 }
@@ -16,7 +16,7 @@ body {
     margin: 50px;
     padding: 0px 0px;
     font-weight: normal;
-    text-align: right;
+    text-align: left;
     text-transform: uppercase;
     font-size: 200px;
     line-height: 0.6em;
@@ -28,7 +28,7 @@ body {
     margin: 50px;
     padding: 0px 0px;
     font-weight: normal;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     font-size: 200px;
     line-height: -1em;
@@ -56,9 +56,10 @@ body {
     width: 30px;
     height: 200px;
     flex-wrap: nowrap;
-    background-color: black;
+    background-color:rgb(60, 40, 244) ; 
     flex-direction: row;
     z-index: 1;
+    border-radius: 0px 0px 25px 0%;
     
 }
 
@@ -69,20 +70,22 @@ body {
     width: 30px;
     height: 200px;
     flex-wrap: nowrap;
-    background-color: black;
+    background-color: rgb(60, 40, 244) ;
     flex-direction: row;
     z-index: 1;
+    border-radius: 25px 0px 0px 0px;
     
 }
 
 .grandparent {
-    background-color: black;
+    background-color: rgb(60, 40, 244) ;
     width: 90vw;
     height: 100vh;
     margin: 10px;
     line-height: 50px;
     overflow: auto;
     transform: rotate(-1deg);
+    
    }
 
    .parent {
@@ -109,7 +112,7 @@ body {
 
 
 .child-container2 {
-    background-color: white;
+    background-color:azure;
     width: 50vw;
     height: 65vh;
     margin: 1px;
@@ -136,7 +139,7 @@ body {
     display: flex;
     justify-items: center;
     flex-wrap: wrap;
-    background-color: white;
+    background-color: azure;
     flex-direction: row;
     padding-left: 20px;
     
@@ -168,7 +171,7 @@ img {
     background: black;
     width: 70px;
     height: 25px;
-    color: white;
+    color:azure;
     text-align: center;
     font-weight: normal;
     font-size: 20px;
@@ -184,7 +187,7 @@ img {
     border-style: dotted;
     border-width: 1px;
     border-color: black;
-    background: white;
+    background: azure;
     width: 70px;
     height: 25px;
     color: black;
@@ -275,14 +278,14 @@ h3 {
 }
 
   h4 {
-    margin: 0px;
-  padding: 10px 10px 15px 0px;
+  margin: 0px;
+  padding: 12px 10px 15px 5px;
   font-weight: normal;
   text-align: center;
   text-transform: uppercase;
-  transform: rotate(90deg); /* Dreht den Text */
+  transform: rotate(90deg); 
   z-index: 1;
-  color: aliceblue;
+  color:azure;
 }
    h6 {
     font-family: OffBitTrial-101;
@@ -294,7 +297,7 @@ h3 {
     justify-content: center;
     text-transform: uppercase;
     z-index: 1;
-    color: aliceblue;
+    color: azure;
 }
 
 p {
@@ -327,28 +330,40 @@ p {
 .cell {
     width: 70px;
     height: 70px;
-    border: 1px solid black;
+    border: 1px solid rgb(60, 40, 244) ;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: azure;
     position: relative;
+    
 }
 
 .cell.hidden {
-    background-color: black;
+    background-color:rgb(60, 40, 244);
 }
+
+
 
 .letter {
-    font-size: 2rem;
-    font-weight: bold;
-    color: transparent;
-    transition: color 0.2s;
-    opacity: 0;
+  font-size: 2rem;
+  font-weight: bold;
+  color: transparent;
+  opacity: 0;
+  transition: color 0.2s, opacity 0.2s;
 }
 
-.cell:hover .letter,
+.cell:hover .letter
+{
+  color: rgb(60, 40, 244) ;
+  opacity: 1;
+  transition: color 0.2s, opacity 0.2s;
+  
+  
+}
+
 .cell.revealed .letter {
-    color: black;
-    opacity: 1
+  color: rgb(60, 40, 244) ;
+  opacity: 1;
+
 }
