--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -10,16 +10,23 @@
 
 @font-face {
   font-family: OffBitTrial-101;
-  src:url(../fonts/OffBitTrial/OffBitTrial-101.otf) format("opentype");
+  src:url(../fonts/OffBitTrial/OffBitTrial-101.otf) format("otf");
   font-weight:200;
   font-style:normal;
 
   }
 
-  @font-face {
-    font-family: OffBitTrial-Dot;
-    src:url(../fonts/OffBitTrial/OffBitTrial-Dot.otf) format("opentype");
-    font-weight:200;
-    font-style:normal;
+@font-face {
+  font-family: OffBitTrial-Dot;
+  src:url(../fonts/OffBitTrial/OffBitTrial-Dot.otf) format("otf");
+  font-weight:200;
+  font-style:normal;
   
-    }
+  }
+@font-face {
+  font-family: OfKosugiMaru-Regular;
+  src:url(../fonts/KosugiMaru/KosugiMaru-Regular.ttf) format("ttf");
+  font-weight:200;
+  font-style:normal;
+  
+  }
