--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,9 @@ body {
     padding: 50px 10px 10px 10px;
     height: 100vh;
     display: flex;
+    font-size: 16px;
     justify-content: center;
-    background-color: azure;
+    background-color: var(--color-2);
     overflow: auto;
     font-family: "IBM Plex Mono";
 }
@@ -17,11 +18,11 @@ body {
     margin: 50px;
     padding: 0px 0px;
     font-weight: normal;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     font-size: 200px;
     line-height: 0.6em;
-    color: azure;
+    color: var(--color-2);
 }
 
 @media (max-width: 780px) {
@@ -31,11 +32,11 @@ body {
       margin: 25px;
       padding: 0px 0px;
       font-weight: normal;
-      text-align: left;
+      text-align: center;
       text-transform: uppercase;
       font-size: 150px;
       line-height: 1em;
-      color: azure;
+      color: var(--color-2);
   }
 }  
 .title2 {
@@ -47,7 +48,7 @@ body {
     text-transform: uppercase;
     font-size: 200px;
     line-height: -1em;
-    color: azure;
+    color: var(--color-2);
     z-index: 1;
 }
 
@@ -62,7 +63,7 @@ body {
       text-transform: uppercase;
       font-size: 150px;
       line-height: -1em;
-      color: azure;
+      color: var(--color-2);
   }
 }  
 
@@ -75,7 +76,7 @@ body {
     text-transform: uppercase;
     font-size: 200px;
     line-height: -1em;
-    color: azure;
+    color: var(--color-2);
     z-index: 1;
 }
 
@@ -90,7 +91,7 @@ body {
       text-transform: uppercase;
       font-size: 200px;
       line-height: 1em;
-      color: azure;
+      color: var(--color-2);
   }
 }  
 
@@ -104,7 +105,7 @@ body {
     text-transform: uppercase;
     font-size: 300px;
     line-height: 0.6em;
-    color: azure;
+    color: var(--color-2);
 }
 
 @media (max-width: 780px) {
@@ -118,7 +119,7 @@ body {
       text-transform: uppercase;
       font-size: 150px;
       line-height: 1em;
-      color: azure;
+      color: var(--color-2);
   }
 }  
 .initial2 {
@@ -130,7 +131,7 @@ body {
     text-transform: uppercase;
     font-size: 300px;
     line-height: -1em;
-    color: azure;
+    color: var(--color-2);
     z-index: 1;
 }
 
@@ -145,10 +146,9 @@ body {
       text-transform: uppercase;
       font-size: 150px;
       line-height: -1em;
-      color: azure;
+      color: var(--color-2);
   }
 }  
-
 
 .aboutbox {
     position: fixed;
@@ -157,8 +157,8 @@ body {
     width: 30px;
     height: 200px;
     flex-wrap: nowrap;
-    background-color:rgb(60, 40, 244) ;
-    box-shadow: 5px 2px 10px 0px azure;; 
+    background-color: var(--color-1) ;
+    box-shadow: 5px 2px 10px 0px var(--color-2); 
     flex-direction: row;
     z-index: 1;
     border-radius: 0px 0px 15px 0%;
@@ -172,8 +172,8 @@ body {
     width: 30px;
     height: 200px;
     flex-wrap: nowrap;
-    background-color: rgb(60, 40, 244) ;
-    box-shadow: 0px 0px 10px 4px azure;; 
+    background-color: var(--color-1);
+    box-shadow: 0px 0px 10px 4px var(--color-2);; 
     flex-direction: row;
     z-index: 1;
     border-radius: 15px 0px 0px 0px;
@@ -181,20 +181,19 @@ body {
 }
 
 .grandparent {
-    background-color: rgb(60, 40, 244) ;
+    background-color: var(--color-1);
     width: 90vw;
     height: 100vh;
     margin: 10px;
     line-height: 50px;
     overflow: auto;
     transform: rotate(0deg);
-    
    }
 
    .parent {
     display: flex;
     flex-wrap: nowrap;
-    background-color: rgb(60, 40, 244);
+    background-color: var(--color-1);
     flex-direction: row;
     justify-content:space-between;
     z-index: 0;
@@ -203,9 +202,9 @@ body {
 }
 
 .child-container1 {
-    background-color: rgb(60, 40, 244);
+    background-color: var(--color-1);
     width: 80vw;
-    height: 60vh;
+    height: 35vh;
     margin: 0px;
     text-align: center;
     line-height: 50px;
@@ -214,49 +213,228 @@ body {
   }
 
 .child-container2 {
-    background-color:azure;
+    background-color: var(--color-2);
     width: 40vw;
-    height: 75vh;
+    height: 90vh;
     margin: 65px;
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
     line-height: 50px;
+    top: 0px;
+    left: 0px;
     font-size: 10px;
     overflow: auto;
     border-radius: 25px 0px 0px 0px;
-    
-  }
-  
-  @media (max-width: 780px) {
-    .parent {
-        flex-direction: column; /* Flexbox-Anordnung vertikal */
-        justify-content: center; /* Zentriert die Container */
-        align-items: center; /* Zentriert horizontal */
-    }
-
-    .child-container1 {
-        width: 90vw; /* Breite anpassen für kleinere Bildschirme */
-        margin: 0px 0; /* Vertikaler Abstand */
-        order: 1; /* Child-Container 1 immer zuerst */
-        overflow: hidden;
-        border-radius: 0px 0px 0px 0px;
-        
-    }
-
-    .child-container2 {
-        width: 90vw; /* Breite anpassen für kleinere Bildschirme */
-        margin: 0px 0; /* Vertikaler Abstand */
-        order: 2; /* Child-Container 2 immer nach Container 1 */
-        overflow: hidden;
-        border-radius: 0px 0px 0px 0px;
-        
-    }
+    z-index:1; 
 }
 
-  .hidden-child {
+@media (max-width: 780px) {
+  .parent {
+      flex-direction: column; /* Flexbox-Anordnung vertikal */
+      justify-content: center; /* Zentriert die Container */
+      align-items: center; /* Zentriert horizontal */
+  }
+
+  .child-container1 {
+      width: 90vw; /* Breite anpassen für kleinere Bildschirme */
+      margin: 0px 0; /* Vertikaler Abstand */
+      order: 1; /* Child-Container 1 immer zuerst */
+      overflow: hidden;
+      border-radius: 0px 0px 0px 0px;
+      
+  }
+
+  .child-container2 {
+      width: 90vw; /* Breite anpassen für kleinere Bildschirme */
+      margin: 0px 0; /* Vertikaler Abstand */
+      order: 2; /* Child-Container 2 immer nach Container 1 */
+      overflow: hidden;
+      border-radius: 0px 0px 0px 0px;
+      z-index:0
+      
+  }
+}
+
+.bookcontainer {
+  display: flex;
+  width: 80vw; /* Volle Breite des Viewports */
+  height: 60vh; 
+}
+
+.bookleft {
+  width: 50vw; /* 50% der Breite */
+  height: 100vh; /* Volle Höhe */
+  background-color: var(--color-2); /* Beispiel-Hintergrundfarbe */
+  display: flex;
+  justify-content: center; /* Zentriere Inhalt horizontal */
+  align-items: center; /* Zentriere Inhalt vertikal */
+  box-shadow: 20px 20px 30px grey
+}
+
+.bookright {
+  width: 50vw; /* 50% der Breite */
+  height: 100vh; /* Volle Höhe */
+  background-color: var(--color-1); /* Beispiel-Hintergrundfarbe */
+  display: flex;
+  justify-content: center; /* Zentriere Inhalt horizontal */
+  align-items: center;
+  
+}
+.post-container {
+  position: relative;
+  margin: 65px;
+}
+
+.post-box {
+position: relative;
+border-radius: 25px 0px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+}
+
+.box-1 {
+  position: absolute;
+  margin-top: 1%;
+  left: 50%;
+  width: 200px;
+  height: 400px;
+  border-radius: 25px 0px 0px 0px;
+  border: 2px solid var(--color-1);
+  background-color: var(--color-2);
+  transform: skewY(-20deg);
+  z-index: 1;
+  }
+  
+  .box-2 {
+  position: absolute;
+  margin-top: 2.5%;
+  left: 50%;
+  width: 300px;
+  height: 400px;
+  border-radius: 25px 0px 0px 0px;
+  border: 2px solid var(--color-1);
+  background-color: var(--color-2);
+  transform: skewY(-10deg);
+  z-index: 2;
+  }
+
+.box-3 {
+position: absolute;
+margin-top: 6%;
+left: 50%;
+width: 350px;
+border-radius: 25px 0px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+transform: skewY(5deg);
+z-index: 3;
+}
+
+.box-4 {
+position: absolute;
+margin-top: 12%;
+left: 50%;
+width: 300px;
+height: 400px;
+border-radius: 25px 0px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+transform: skewY(30deg);
+z-index: 4;
+}
+
+.box-5 {
+position: absolute;
+margin-top: 16%;
+left: 50%;
+width: 150px;
+height: 400px;
+border-radius: 25px 0px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+transform: skewY(60deg);
+z-index: 5;
+  }
+
+.box-2:hover {
+  top: 109%;
+  width: 350px;
+  transform: skewY(5deg);
+  z-index: 7;
+}
+
+.five:hover {
+  top: 109%;
+  width: 350px;
+  transform: skewY(5deg);
+}
+
+.six:hover {
+  top: 109%;
+  width: 350px;
+  transform: skewY(5deg);
+}
+
+.box-6 {
+  position: absolute;
+  margin-top: 15%;
+  top: 125%;
+  right: 49.9%;
+  width: 150px;
+  height: 400px;
+  border-radius: 0px 25px 0px 0px;
+  border: 2px solid var(--color-1);
+  background-color: var(--color-2);
+  transform: skewY(-60deg);
+  z-index: 6;
+  }
+
+.box-7 {
+position: absolute;
+margin-top: 15%;
+top: 119% ;
+right: 49.9%;
+width: 300px;
+height: 400px;
+border-radius: 0px 25px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+transform: skewY(-30deg);
+z-index: 5;
+}
+
+.box-8 {
+position: absolute;
+margin-top: 15%;
+top: 109%;
+right: 49.9%;
+width: 350px;
+height: 400px;
+border-radius: 0px 25px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+transform: skewY(-5deg); 
+z-index: 4;
+}
+
+.box-9 {
+position: absolute;
+margin-top: 15%;
+top: 102%;
+right: 49.9%;
+width: 300px;
+height: 400px;
+border-radius: 0px 25px 0px 0px;
+border: 2px solid var(--color-1);
+background-color: var(--color-2);
+transform: skewY(10deg);
+z-index:3;
+}
+
+.hidden-child {
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+  
   }
 
   .child-container1:hover .hidden-child {
@@ -266,15 +444,18 @@ body {
   .child-container2:hover .hidden-child {
     opacity: 1
   }
+  .post-container:hover .hidden-child {
+    opacity: 1
+  }
 
   .containerimg {
     display: flex;
     justify-items: center;
     flex-wrap: wrap;
-    background-color: azure;
+    background-color: var(--color-2);
     flex-direction: row;
     padding-left: 20px;
-    
+    color: inherit;
 }
 
 img {
@@ -290,7 +471,7 @@ img {
     line-height: 1em;
     transform: rotate(0deg); /* Dreht den Text */
     z-index: 1;
-    color: rgb(60, 40, 244);
+    color: var(--color-1);
     opacity: 0
   } 
 
@@ -302,11 +483,11 @@ img {
     border-radius: 25px;
     border: 1px;
     border-style: dotted;
-    border-color: rgb(60, 40, 244);
-    background: rgb(60, 40, 244);
+    border-color: var(--color-1);
+    background: var(--color-1);
     width: 70px;
     height: 25px;
-    color:azure;
+    color:var(--color-2);
     text-align: center;
     font-weight: normal;
     font-size: 20px;
@@ -321,11 +502,11 @@ img {
     border-radius: 25px;
     border-style: dotted;
     border-width: 1px;
-    border-color: rgb(60, 40, 244);
-    background: azure;
+    border-color: var(--color-1);
+    background: var(--color-2);
     width: 70px;
     height: 25px;
-    color: rgb(60, 40, 244);
+    color: var(--color-1);
     text-align: center;
     font-weight: normal;
     font-size: 20px;
@@ -384,13 +565,14 @@ img {
 }
 
  a {
-            text-decoration: none; /* Entfernt den Unterstrich */
-            color: azure; /* Optionale Farbe für den Link */
-        }
+  text-decoration: none; /* Entfernt den Unterstrich */
+  color: inherit;/* Optionale Farbe für den Link */
+}
 
-        a:hover {
-            text-decoration: underline; /* Optional: Unterstrich beim Hover */
-        }
+a:hover {
+text-decoration: underline; /* Optional: Unterstrich beim Hover */
+color: inherit;
+          }
   
   h1 {
     margin: 10px;
@@ -400,7 +582,7 @@ img {
   text-transform: uppercase;
   font-size: 120px;
   line-height: 0em;
-  color: rgb(60, 40, 244);
+  color: var(--color-1);
 }
 
   h2 {
@@ -411,18 +593,19 @@ img {
   text-transform: uppercase;
   font-size: 40px;
   line-height: 1em;
-  color: rgb(60, 40, 244);
+  color: var(--color-1);
 }
 
 h3 {
 
-  padding-left: 20px;
+  padding-right: 10px;
   font-weight: normal;
   text-align: left;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 1.15em;
-  color: rgb(60, 40, 244);
+  color: var(--color-1);
+  font-family: KosugiMaru-Regular;
 }
 
   h4 {
@@ -433,7 +616,7 @@ h3 {
   text-transform: uppercase;
   transform: rotate(90deg); 
   z-index: 1;
-  color:azure;
+  color:var(--color-2);
 }
    h6 {
     font-family: OffBitTrial-101;
@@ -445,19 +628,19 @@ h3 {
     justify-content: center;
     text-transform: uppercase;
     z-index: 1;
-    color: azure;
+    color: var(--color-2);
 }
 
 p {
   font-family: "OffBitTrial-101";
-  margin: 10px;
+  margin: 1em;
   padding: top right bottom left;
   padding: 0px 20px;
   font-weight: normal;
   text-align:left;
   font-size: 12px;
   line-height: 1.15em;
-  color: rgb(60, 40, 244);
+  color: var(--color-1);
 }
 
 .crossword:hover {
@@ -472,7 +655,7 @@ p {
 
 .crossword {
     display: grid;
-    grid-template-columns: repeat(15, 55px);
+    grid-template-columns: repeat(10, 55px);
     grid-auto-rows: 85px;
     gap: 0px;
     margin: 0px;
@@ -489,18 +672,18 @@ p {
 .cell {
     width: 55px;
     height: 85px;
-    border: 2px solid rgb(60, 40, 244);
+    border: 2px solid var(--color-1);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: azure;
+    background-color: var(--color-2);
     position: relative;
     border-radius: 15px 0px 0px 0px;
     
 }
 
 .cell.hidden {
-    background-color:rgb(60, 40, 244);
+    background-color:var(--color-1);
     border-radius: 0px 0px 0px 0px;
 }
 
@@ -516,12 +699,19 @@ p {
 
 .cell:hover .letter
 {
-  color: rgb(60, 40, 244) ;
+  color: var(--color-1) ;
   opacity: 1;
 }
 
 .letter.persistent
 {
-  color: rgb(60, 40, 244) ;
+  color: var(--color-1) ;
   opacity: 1;
+}
+
+
+:root {
+  --color-1: rgb(0, 0, 0); 
+  --color-2: rgb(207, 221, 250);
+  
 }
